# app/Http/Requests/Api/Employees/EmployeeApiDetailPresenceRequest.php
@@ -1,0 +1,32 @@
+<?php
+
+namespace App\Http\Requests\Api\Employees;
+
+use App\Http\APIRequest;
+
+class EmployeeApiDetailPresenceRequest extends APIRequest
+{
+
+    use RuleTrait;
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'id' => $this->getIdRules(),
+            'employee_presence_id' => $this->getPresenceRules(),
+        ];
+    }
+
+    protected function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id'),
+            'employee_presence_id' => $this->route('employee_presence_id'),
+        ]);
+    }
+}
