# app/Http/Requests/Api/Employees/EmployeeApiListPresenceRequest.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Requests\Api\Employees;
+
+use App\Http\APIRequest;
+
+class EmployeeApiListPresenceRequest extends APIRequest
+{
+
+    use RuleTrait;
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'id' => $this->getIdRules(),
+        ];
+    }
+
+    protected function prepareForValidation()
+    {
+        $this->merge([
+            'id' => $this->route('id'),
+        ]);
+    }
+}
