# routes/api.php
@@ -85,6 +85,9 @@ Route::middleware('auth:sanctum')->group(function(){
         Route::delete('{id}/place',[EmployeeApiController::class,'deletePlace']);
         Route::patch('{id}/place',[EmployeeApiController::class,'freePlace']);
         Route::post('{id}/presences',[EmployeeApiController::class,'presences']);
+        Route::get('{id}/presences/{employee_presence_id}',[EmployeeApiController::class,'detailPresence']);
+        Route::get('{id}/presences',[EmployeeApiController::class,'listPresence']);
+        Route::patch('{id}/presences/{employee_presence_id}',[EmployeeApiController::class,'updatePresence']);
     });
 
     Route::prefix('users')->group(function(){
